--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container flex">
         <nav class="nav">
           <a class="logo link" href="./index.html">Web<span class="logo-head">Studio</span></a>
@@ -35,7 +35,7 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
       <!-- Hero -->
       <section class="hero">
@@ -307,7 +307,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container flex">
+      <div class="container">
         <div class="content">
           <a class="logo link" href="./index.html">Web<span class="logo-btm">Studio</span></a>
           <p class="text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
@@ -347,7 +347,7 @@
         </div>
         <div class="subscribe">
           <p class="text">Subscribe</p>
-          <form class="flex">
+          <form class="sub-form">
             <label aria-label="footer-input"></label>
             <input type="email" name="email" class="sub-mail" placeholder="E-mail" id="email" />
             <button type="submit" class="sub button">
