--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
         <nav class="nav">
           <a class="logo link" href="./index.html">Web<span class="logo-head">Studio</span></a>
           <ul class="nav-list list">
-            <li><a class="nav-link link" href="./index.html">Studio</a></li>
-            <li><a class="nav-link link current" href="./portfolio.html">Portfolio</a></li>
+            <li><a class="nav-link link current" href="./index.html">Studio</a></li>
+            <li><a class="nav-link link" href="./portfolio.html">Portfolio</a></li>
             <li><a class="nav-link link" href="">Contacts</a></li>
           </ul>
         </nav>
@@ -34,6 +34,61 @@
             <li><a class="address-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
           </ul>
         </address>
+        <button class="nav-btn" data-menu-open type="button">
+          <svg class="icon" width="29" height="18">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="mob-menu is-hidden" data-menu>
+        <button class="menu-btn" data-menu-close type="button">
+          <svg class="icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <nav class="menu-nav">
+          <ul class="menu-nav-list list">
+            <li><a class="menu-link link current" href="./index.html">Studio</a></li>
+            <li><a class="menu-link link" href="./portfolio.html">Portfolio</a></li>
+            <li><a class="menu-link link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="menu-address">
+          <ul class="menu-add-list list">
+            <li><a class="menu-add-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="menu-phone-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          </ul>
+        </address>
+        <ul class="menu-soc-list list">
+          <li class="soc-item">
+            <a class="soc-link" href="">
+              <svg class="icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="soc-item">
+            <a class="soc-link" href="">
+              <svg class="icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="soc-item">
+            <a class="soc-link" href="">
+              <svg class="icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="soc-item">
+            <a class="soc-link" href="">
+              <svg class="icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </header>
     <main>
@@ -51,7 +106,12 @@
             <li class="card">
               <a class="link" href="">
                 <div class="thumb">
-                  <img src="./images/portfolio1.jpg" alt="banking app" width="360" height="300" />
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio1.jpg 1x, ./images/portfolio1_2x.jpg 2x" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio1_tab.jpg 1x, ./images/portfolio1_tab_2x.jpg 2x" />
+                    <source media="(max-width: 767px)" srcset="./images/portfolio1_mob.jpg 1x, ./images/portfolio1_mob_2x.jpg 2x" />
+                    <img src="./images/portfolio1_mob.jpg" alt="banking app" width="396" />
+                  </picture>
                   <p class="overlay text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="card-content">
@@ -63,7 +123,12 @@
             <li class="card">
               <a class="link" href="">
                 <div class="thumb">
-                  <img src="./images/portfolio2.jpg" alt="qr code" width="360" height="300" />
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio2.jpg 1x, ./images/portfolio2_2x.jpg 2x" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio2_tab.jpg 1x, ./images/portfolio2_tab_2x.jpg 2x" />
+                    <source media="(max-width: 767px)" srcset="./images/portfolio2_mob.jpg 1x, ./images/portfolio2_mob_2x.jpg 2x" />
+                    <img src="./images/portfolio2_mob.jpg" alt="qr code" width="396" />
+                  </picture>
                   <p class="overlay text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="card-content">
@@ -75,7 +140,12 @@
             <li class="card">
               <a class="link" href="">
                 <div class="thumb">
-                  <img src="./images/portfolio3.jpg" alt="notebook" width="360" height="300" />
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio3.jpg 1x, ./images/portfolio3_2x.jpg 2x" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio3_tab.jpg 1x, ./images/portfolio3_tab_2x.jpg 2x" />
+                    <source media="(max-width: 767px)" srcset="./images/portfolio3_mob.jpg 1x, ./images/portfolio3_mob_2x.jpg 2x" />
+                    <img src="./images/portfolio3_mob.jpg" alt="notebook" width="396" />
+                  </picture>
                   <p class="overlay text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="card-content">
@@ -87,7 +157,12 @@
             <li class="card">
               <a class="link" href="">
                 <div class="thumb">
-                  <img src="./images/portfolio4.jpg" alt="car" width="360" height="300" />
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio4.jpg 1x, ./images/portfolio4_2x.jpg 2x" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio4_tab.jpg 1x, ./images/portfolio4_tab_2x.jpg 2x" />
+                    <source media="(max-width: 767px)" srcset="./images/portfolio4_mob.jpg 1x, ./images/portfolio4_mob_2x.jpg 2x" />
+                    <img src="./images/portfolio4_mob.jpg" alt="car" width="396" />
+                  </picture>
                   <p class="overlay text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="card-content">
@@ -99,7 +174,12 @@
             <li class="card">
               <a class="link" href="">
                 <div class="thumb">
-                  <img src="./images/portfolio5.jpg" alt="phone" width="360" height="300" />
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio5.jpg 1x, ./images/portfolio5_2x.jpg 2x" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio5_tab.jpg 1x, ./images/portfolio5_tab_2x.jpg 2x" />
+                    <source media="(max-width: 767px)" srcset="./images/portfolio5_mob.jpg 1x, ./images/portfolio5_mob_2x.jpg 2x" />
+                    <img src="./images/portfolio5_mob.jpg" alt="phone" width="396" />
+                  </picture>
                   <p class="overlay text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="card-content">
@@ -111,7 +191,12 @@
             <li class="card">
               <a class="link" href="">
                 <div class="thumb">
-                  <img src="./images/portfolio6.jpg" alt="woman" width="360" height="300" />
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio6.jpg 1x, ./images/portfolio6_2x.jpg 2x" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio6_tab.jpg 1x, ./images/portfolio6_tab_2x.jpg 2x" />
+                    <source media="(max-width: 767px)" srcset="./images/portfolio6_mob.jpg 1x, ./images/portfolio6_mob_2x.jpg 2x" />
+                    <img src="./images/portfolio6_mob.jpg" alt="woman" width="396" />
+                  </picture>
                   <p class="overlay text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="card-content">
@@ -123,7 +208,12 @@
             <li class="card">
               <a class="link" href="">
                 <div class="thumb">
-                  <img src="./images/portfolio7.jpg" alt="blog" width="360" height="300" />
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio7.jpg 1x, ./images/portfolio7_2x.jpg 2x" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio7_tab.jpg 1x, ./images/portfolio7_tab_2x.jpg 2x" />
+                    <source media="(max-width: 767px)" srcset="./images/portfolio7_mob.jpg 1x, ./images/portfolio7_mob_2x.jpg 2x" />
+                    <img src="./images/portfolio7_mob.jpg" alt="blog" width="396" />
+                  </picture>
                   <p class="overlay text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="card-content">
@@ -135,7 +225,12 @@
             <li class="card">
               <a class="link" href="">
                 <div class="thumb">
-                  <img src="./images/portfolio8.jpg" alt="food" width="360" height="300" />
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio8.jpg 1x, ./images/portfolio8_2x.jpg 2x" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio8_tab.jpg 1x, ./images/portfolio8_tab_2x.jpg 2x" />
+                    <source media="(max-width: 767px)" srcset="./images/portfolio8_mob.jpg 1x, ./images/portfolio8_mob_2x.jpg 2x" />
+                    <img src="./images/portfolio8_mob.jpg" alt="food" width="396" />
+                  </picture>
                   <p class="overlay text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="card-content">
@@ -147,7 +242,12 @@
             <li class="card">
               <a class="link" href="">
                 <div class="thumb">
-                  <img src="./images/portfolio9.jpg" alt="coffee" width="360" height="300" />
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./images/portfolio9.jpg 1x, ./images/portfolio9_2x.jpg 2x" />
+                    <source media="(min-width: 768px)" srcset="./images/portfolio9_tab.jpg 1x, ./images/portfolio9_tab_2x.jpg 2x" />
+                    <source media="(max-width: 767px)" srcset="./images/portfolio9_mob.jpg 1x, ./images/portfolio9_mob_2x.jpg 2x" />
+                    <img src="./images/portfolio9_mob.jpg" alt="coffee" width="396" />
+                  </picture>
                   <p class="overlay text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="card-content">
@@ -161,7 +261,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container flex">
+      <div class="container">
         <div class="content">
           <a class="logo link" href="./index.html">Web<span class="logo-btm">Studio</span></a>
           <p class="text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
@@ -201,7 +301,7 @@
         </div>
         <div class="subscribe">
           <p class="text">Subscribe</p>
-          <form class="flex">
+          <form class="sub-form">
             <label aria-label="footer-input"></label>
             <input type="email" name="email" class="sub-mail" placeholder="E-mail" id="email" />
             <button type="submit" class="sub button">
@@ -214,5 +314,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
