--- a/portfolio.html
+++ b/portfolio.html
@@ -18,13 +18,13 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
-      <div class="container flex">
+    <header class="">
+      <div class="container flex px-2">
         <nav class="nav">
           <a class="logo link" href="./index.html">Web<span class="logo-head">Studio</span></a>
           <ul class="nav-list list">
-            <li><a class="nav-link link current" href="./index.html">Studio</a></li>
-            <li><a class="nav-link link" href="./portfolio.html">Portfolio</a></li>
+            <li><a class="nav-link link" href="./index.html">Studio</a></li>
+            <li><a class="nav-link link current" href="./portfolio.html">Portfolio</a></li>
             <li><a class="nav-link link" href="">Contacts</a></li>
           </ul>
         </nav>
