--- a/portfolio.html
+++ b/portfolio.html
@@ -314,6 +314,6 @@
         </div>
       </div>
     </footer>
-    <script src="./js/mobile-menu.js"></script>
+    <!-- <script src="./js/mobile-menu.js"></script> -->
   </body>
 </html>
