style footer and secodn page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <nav class="flex items-center">
           <a class="font-logo font-extrabold text-lg uppercase text-colorLogoAcsent leading-5" href="./index.html">Web<span class="text-colorSec">Studio</span></a>
           <ul class="hidden md:flex gap-9 ml-20 font-medium " >
-            <li><a class="text-colorAct hover:text-colorAct transition-colors relative after:content-[''] after:absolute after:top-[45px] after:left-0 after:w-full after:h-1 after:bg-colorAct" href="./index.html">Studio</a></li>
+            <li><a class="text-colorAct hover:text-colorAct transition-colors relative after:content-[''] after:absolute after:top-[42px] after:left-0 after:w-full after:h-1 after:bg-colorAct" href="./index.html">Studio</a></li>
             <li><a class="text-colorSec hover:text-colorAct transition-colors" href="./portfolio.html">Portfolio</a></li>
             <li><a class="text-colorSec hover:text-colorAct transition-colors" href="">Contacts</a></li>
           </ul>
@@ -402,60 +402,60 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
-      <div class="container">
-        <div class="content">
-          <a class="logo link" href="./index.html">Web<span class="logo-btm">Studio</span></a>
-          <p class="text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="py-[96px] bg-colorSec">
+      <div class="container mx-auto px-[15px] max-w-[426px] md:max-w-[582px] md:flex flex-wrap justify-between lg:max-w-[1158px]">
+        <div class="mb-[72px] lg:m-0">
+          <a class="block text-[18px] text-colorLogoAcsent text-center font-extrabold font-logo uppercase leading-[1.17] pointer mb-[16px] md:text-left" href="./index.html">Web<span class="text-backSection">Studio</span></a>
+          <p class="text-backSection text-left w-[268px] mx-auto">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
-        <div class="smedia">
-          <p class="text">Social media</p>
-          <ul class="smedia-list list">
-            <li class="smedia-item">
-              <a class="smedia-link" href="">
-                <svg class="icon" width="24" height="24">
+        <div class="mb-[72px] md:mr-[28px] lg:m-0">
+          <p class="font-medium text-white text-center mb-[16px] md:text-left">Social media</p>
+          <ul class="flex justify-center gap-[14px]">
+            <li >
+              <a class="flex justify-center items-center w-[40px] h-[40px] bg-colorPrim rounded-full hover:bg-black transition-colors" href="">
+                <svg class="fill-white" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="smedia-item">
-              <a class="smedia-link" href="">
-                <svg class="icon" width="24" height="24">
+            <li >
+              <a class="flex justify-center items-center w-[40px] h-[40px] bg-colorPrim rounded-full hover:bg-black transition-colors" href="">
+                <svg class="fill-white" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="smedia-item">
-              <a class="smedia-link" href="">
-                <svg class="icon" width="24" height="24">
+            <li >
+              <a class="flex justify-center items-center w-[40px] h-[40px] bg-colorPrim rounded-full hover:bg-black transition-colors" href="">
+                <svg class="fill-white" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="smedia-item">
-              <a class="smedia-link" href="">
-                <svg class="icon" width="24" height="24">
+            <li >
+              <a class="flex justify-center items-center w-[40px] h-[40px] bg-colorPrim rounded-full hover:bg-black transition-colors" href="">
+                <svg class="fill-white" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <div class="subscribe">
-          <p class="text">Subscribe</p>
-          <form class="sub-form">
+        <div>
+          <p class="font-medium text-white text-center mb-[16px] md:text-left">Subscribe</p>
+          <form class="md:flex items-center">
             <label aria-label="footer-input"></label>
-            <input type="email" name="email" class="sub-mail" placeholder="E-mail" id="email" />
-            <button type="submit" class="sub button">
+            <input type="email" name="email" class="w-full text-white placeholder:text-white bg-transparent border border-white rounded-[4px] py-[8px] px-[16px] leading-[1.2] mb-[16px] md:mb-0 md:w-[264px]" placeholder="E-mail" id="email" />
+            <button type="submit" class="flex gap-[16px] bg-colorLogoAcsent font-medium text-white py-[8px] px-[24px] mx-auto rounded-[4px] outline-none border-none hover:bg-colorAct transition-colors md:ml-[24px]">
               Subscribe
-              <svg class="icon" width="24" height="24">
+              <svg class="" width="24" height="24">
                 <use href="./images/icons.svg#icon-plane"></use>
               </svg>
             </button>
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" data-modal-close type="button">
