--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
         </button>
       </div>
       <!-- mobile-menu -->
-      <div class="fixed top-0 left-0 flex flex-col justify-between w-full h-full py-[24px] px-[40px] bg-white translate-x-[-100%] transition-transform" data-menu>
+      <div class="fixed top-0 left-0 flex flex-col justify-between w-full h-full py-[24px] px-[40px] bg-white translate-x-[-100%] transition-transform z-10" data-menu>
         <button class="w-[24px] h-[24px] absolute right-[70px]" data-menu-close type="button">
           <svg class="w-full h-full" >
             <use href="./images/icons.svg#icon-close"></use>
@@ -89,8 +89,8 @@
         </button>
         <nav class="pt-[50px]">
           <ul class="flex flex-col gap-[40px]">
-            <li><a class="text-[36px] font-bold text-colorAct hover:text-colorAct transition-colors" href="./index.html">Studio</a></li>
-            <li><a class="text-[36px] font-bold text-colorSec hover:text-colorAct transition-colors" href="./portfolio.html">Portfolio</a></li>
+            <li><a class="text-[36px] font-bold text-colorSec hover:text-colorAct transition-colors" href="./index.html">Studio</a></li>
+            <li><a class="text-[36px] font-bold text-colorAct hover:text-colorAct transition-colors" href="./portfolio.html">Portfolio</a></li>
             <li><a class="text-[36px] font-bold text-colorSec hover:text-colorAct transition-colors" href="">Contacts</a></li>
           </ul>
         </nav>
