--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
               backSection: '#F4F4FD',
               backCard: '#FFFFFF',
               borderCard: '#8E8F99',
+              backdrop: 'rgba(46, 47, 66, 0.4)',
+              button: '#E7E9FC',
+              btnBorder: 'rgba(0, 0, 0, 0.1)',
             },
             screens:{
               sm: '480px',
@@ -79,7 +82,7 @@
         </button>
       </div>
       <!-- mobile-menu -->
-      <div class="fixed top-0 left-0 flex flex-col justify-between w-full h-full py-[24px] px-[40px] bg-white translate-x-[-100%] transition-transform" data-menu>
+      <div class="fixed top-0 left-0 flex flex-col justify-between w-full h-full py-[24px] px-[40px] bg-white translate-x-[-100%] transition-transform z-10" data-menu>
         <button class="w-[24px] h-[24px] absolute right-[70px]" data-menu-close type="button">
           <svg class="w-full h-full" >
             <use href="./images/icons.svg#icon-close"></use>
@@ -456,45 +459,49 @@
         </div>
       </div>
     </footer>
-    <!-- <div class="backdrop is-hidden" data-modal>
-      <div class="modal">
-        <button class="modal-btn" data-modal-close type="button">
-          <svg class="icon" width="8" height="8">
+    <div class="fixed top-0 left-0 w-full h-full bg-backdrop opacity-0 pointer-events-none invisible transition-opacity" data-modal>
+      <div class="absolute w-[85vw] max-w-[408px] max-h-[95vh] bg-backCard top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%] scale-100 pt-[72px] px-[16px] pb-[24px] rounded-[4px]">
+        <button class="absolute top-[24px] right-[24px] w-[24px] h-[24px] bg-button rounded-full flex justify-center items-center border border-btnBorder hover:bg-colorAct transition-colors group" data-modal-close type="button">
+          <svg class="group-hover:fill-white transition-colors" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <p class="text">Leave your contacts and we will call you back</p>
+        <p class="text-[14px] font-medium mb-[16px] text-center">Leave your contacts and we will call you back</p>
         <form>
-          <label class="label"
-            ><span class="label-text">Name</span>
-            <div class="input-wrap">
-              <input type="text" class="input" name="name" /><svg class="icon" width="18" height="18"><use href="./images/icons.svg#icon-person"></use></svg></div
+          <label class="mb-[8px] block text-[12px] text-colorSec leading-[1.17] focus-within:text-colorLogoAcsent transition-colors"
+            ><span class="block text-borderCard mb-[4px]">Name</span>
+            <div class="relative">
+              <input type="text" class="block w-full h-[40px] pl-[38px] border border-backdrop rounded-[4px] outline-none focus:border-colorLogoAcsent transition-colors" name="name" />
+              <svg class="absolute top-[11px] left-[16px] fill-current" width="18" height="18"><use href="./images/icons.svg#icon-person"></use></svg></div
           ></label>
-          <label class="label"
-            ><span class="label-text">Phone</span>
-            <div class="input-wrap">
-              <input type="tel" class="input" name="phone" /><svg class="icon" width="18" height="24"><use href="./images/icons.svg#icon-phone"></use></svg></div
+          <label class="mb-[8px] block text-[12px] text-colorSec leading-[1.17] focus-within:text-colorLogoAcsent transition-colors"
+            ><span class="block text-borderCard mb-[4px]">Phone</span>
+            <div class="relative">
+              <input type="tel" class="block w-full h-[40px] pl-[38px] border border-backdrop rounded-[4px] outline-none focus:border-colorLogoAcsent transition-colors" name="phone" />
+              <svg class="absolute top-[11px] left-[16px] fill-current" width="18" height="24"><use href="./images/icons.svg#icon-phone"></use></svg></div
           ></label>
-          <label class="label"
-            ><span class="label-text">Email</span>
-            <div class="input-wrap">
-              <input type="email" class="input" name="email" /><svg class="icon" width="18" height="24"><use href="./images/icons.svg#icon-email"></use></svg></div
+          <label class="mb-[8px] block text-[12px] text-colorSec leading-[1.17] focus-within:text-colorLogoAcsent transition-colors"
+            ><span class="block text-borderCard mb-[4px]">Email</span>
+            <div class="relative">
+              <input type="email" class="block w-full h-[40px] pl-[38px] border border-backdrop rounded-[4px] outline-none focus:border-colorLogoAcsent transition-colors" name="email" />
+              <svg class="absolute top-[11px] left-[16px] fill-current" width="18" height="24"><use href="./images/icons.svg#icon-email"></use></svg></div
           ></label>
-          <label class="label"><span class="label-text">Comment</span><textarea class="input area" name="comment" placeholder="Text input"></textarea></label>
-          <div class="checkbox">
-            <input class="check-input hidden" type="checkbox" name="policy" id="policy" />
-            <label class="label" for="policy">
-              <span class="check"
-                ><svg class="icon" width="10" height="8">
+          <label class="mb-[8px] block text-[12px] text-colorSec leading-[1.17] focus-within:text-colorLogoAcsent transition-colors">
+            <span class="block text-borderCard mb-[4px]">Comment</span><textarea class="w-full h-[120px] py-[8px] px-[16px] mb-[16px] border border-backdrop rounded-[4px] outline-none focus:border-colorLogoAcsent transition-colors" name="comment" placeholder="Text input"></textarea></label>
+          <div class="mb-[24px]">
+            <input class="absolute w-[1px] h-[1px] m-[-1px] border-0 p-0 overflow-hidden whitespace-nowrap" type="checkbox" name="policy" id="policy"/>
+            <label class="relative text-[12px] text-colorSec leading-[1.17] pl-[20px] mb-[8px]" for="policy" data-label >
+              <span class="absolute top-[-1px] flex flex-wrap justify-center items-center w-[16px] h-[16px] border border-backdrop rounded-[2px] fill-transparent mr-[8px]" id="checked"
+                ><svg width="10" height="8">
                   <use href="./images/icons.svg#icon-checkbox"></use>
                 </svg> </span
-              >I accept the terms and conditions of the &nbsp; <a class="modal-link" href="">Privacy Policy</a>
+              >I accept the terms and conditions of the &nbsp; <a class="text-colorLogoAcsent underline" href="">Privacy Policy</a>
             </label>
           </div>
-          <button class="button" type="submit">Send</button>
+          <button class="flex font-medium text-backCard justify-center bg-colorLogoAcsent py-[16px] w-[170px] mx-auto rounded-[4px] border-0 hover:bg-colorAct transition-colors" type="submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
   </body>
